# patch-subset-incxfer

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE  check-format.sh
.github/workflows/: ci.yml
brotli/: BUILD  brotli_bit_buffer.cc  brotli_bit_buffer.h  brotli_bit_buffer_test.cc  brotli_font_diff.cc  brotli_font_diff.h  brotli_font_diff_test.cc  brotli_stream.cc  brotli_stream.h  brotli_stream_test.cc  glyf_differ.h  hmtx_differ.h  loca_differ.h  shared_brotli_encoder.h  table_differ.h  table_range.h
common/: BUILD  axis_range.cc  axis_range.h  axis_range_test.cc  binary_diff.h  binary_patch.h  bit_buffer_test.cc  bit_input_buffer.cc  bit_input_buffer.h  bit_input_buffer_test.cc  bit_output_buffer.cc  bit_output_buffer.h  bit_output_buffer_test.cc  branch_factor.h  branch_factor_test.cc  brotli_binary_diff.cc  brotli_binary_diff.h  brotli_binary_patch.cc  brotli_binary_patch.h  brotli_patching_test.cc  compat_id.cc  compat_id.h  fast_hasher.cc  fast_hasher.h  fast_hasher_test.cc  file_font_provider.cc  file_font_provider.h  file_font_provider_test.cc  font_data.h  font_helper.cc  font_helper.h  font_helper_macros.h  font_helper_test.cc  font_provider.h  hasher.h  hb_set_unique_ptr.cc  hb_set_unique_ptr.h  indexed_data_reader.h  indexed_data_reader_test.cc  mock_binary_diff.h  (+9 more)
common/testdata/: update-goldens.sh
docs/: glyph_segmentation.md  static-ift.md
fontations/: README.md
ift/: BUILD  glyph_keyed_diff.cc  glyph_keyed_diff.h  glyph_keyed_diff_test.cc  ift_binary_patch_test.cc  ift_client.cc  ift_client.h  ift_client_test.cc  iftb_binary_patch.cc  iftb_binary_patch.h  iftb_binary_patch_test.cc  integration_test.cc  per_table_brotli_binary_diff.cc  per_table_brotli_binary_diff.h  per_table_brotli_binary_diff_test.cc  per_table_brotli_binary_patch.cc  per_table_brotli_binary_patch.h  per_table_brotli_binary_patch_test.cc  table_keyed_diff.cc  table_keyed_diff.h  table_keyed_diff_test.cc  url_template.cc  url_template.h  url_template_test.cc
ift/client/: BUILD  fontations_client.cc  fontations_client.h
ift/encoder/: BUILD  encoder.cc  encoder.h  encoder_config.proto  encoder_test.cc  glyph_segmentation.cc  glyph_segmentation.h  glyph_segmentation_test.cc  iftb_patch_creator.cc  iftb_patch_creator.h  iftb_patch_creator_test.cc
ift/feature_registry/: BUILD  feature_registry_test.cc  registry_to_cc.py
ift/proto/: BUILD  IFT.proto  format_2_patch_map.cc  format_2_patch_map.h  format_2_patch_map_test.cc  ift_table.cc  ift_table.h  ift_table_test.cc  patch_encoding.h  patch_map.cc  patch_map.h  patch_map_test.cc
ift/testdata/: NotoSansJP-Regular.feature-test.info  NotoSansJP-Regular.info  NotoSansJP[wght].info  README  config.yaml  test_segments.h
js_client/: BUILD  README.md  colrv1.css  colrv1.html  common.css  demo-ift.html  demo.html  demo.js  fonts.css  ift_client.cc  ift_client.h  patch_subset_client.cc
patch_subset/: BUILD  binary_diff.h  binary_patch.h  bit_buffer_test.cc  bit_input_buffer.cc  bit_input_buffer.h  bit_input_buffer_test.cc  bit_output_buffer.cc  bit_output_buffer.h  bit_output_buffer_test.cc  branch_factor.h  branch_factor_test.cc  brotli_binary_diff.cc  brotli_binary_diff.h  brotli_binary_patch.cc  brotli_binary_patch.h  brotli_patching_test.cc  brotli_request_logger.cc  brotli_request_logger.h  brotli_request_logger_test.cc  client_server_integration_test.cc  codepoint_map.cc  codepoint_map.h  codepoint_map_test.cc  codepoint_mapping_checksum.h  codepoint_mapping_checksum_impl.cc  codepoint_mapping_checksum_impl_test.cc  compressed_list_checksum.h  compressed_list_checksum_impl.cc  compressed_list_checksum_impl.h  compressed_list_checksum_impl_test.cc  compressed_set.cc  compressed_set.h  compressed_set_test.cc  constants.h  encodings.h  fake_subsetter.h  fast_hasher.cc  fast_hasher.h  fast_hasher_test.cc  (+47 more)
patch_subset/cbor/: BUILD  array.cc  array.h  array_test.cc  axis_interval.cc  axis_interval.h  axis_interval_test.cc  axis_space.cc  axis_space.h  axis_space_test.cc  cbor_item_unique_ptr.cc  cbor_item_unique_ptr.h  cbor_item_unique_ptr_test.cc  cbor_utils.cc  cbor_utils.h  log  (+31 more)
util/: BUILD  augment.cc  brotli_bit_buffer.cc  brotli_bit_buffer.h  brotli_bit_buffer_test.cc  brotli_font_diff.cc  brotli_font_diff.h  brotli_font_diff_test.cc  brotli_stream.cc  brotli_stream.h  brotli_stream_test.cc  checksum.cc  convert-iftb.cc  convert_iftb.cc  convert_iftb.h  convert_iftb_test.cc  encoder_config.proto  font2ift.cc  glyph_keyed_segmenter.cc  glyph_keyed_segments.cc  glyphs_in_iftb_patch.cc  helper.cc  helper.h  iftb2config.cc  iftb2ift.cc  patch.cc  precompress-test.cc  print-client-state.cc  print-request.cc
(+28 files in other folders)
