module(
    name = "ift_encoder",
    repo_name = "ift_encoder",
)

# Bazel Modules

bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "abseil-cpp", version = "20240722.0.bcr.2")
bazel_dep(name = "protobuf", version = "29.3")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_rust", version = "0.56.0")

# Non Bazel Modules
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Brotli Encoder/Decoder
http_archive(
    name = "brotli",
    build_file = "//third_party:brotli.BUILD",
    sha256 = "3b90c83489879701c05f39b68402ab9e5c880ec26142b5447e73afdda62ce525",
    strip_prefix = "brotli-71fe6cac061ac62c0241f410fbd43a04a6b4f303",
    url = "https://github.com/google/brotli/archive/71fe6cac061ac62c0241f410fbd43a04a6b4f303.zip",
)

# WOFF2 Encoder/Decoder
http_archive(
    name = "woff2",
    build_file = "//third_party:woff2.BUILD",
    sha256 = "730b7f9de381c7b5b09c81841604fa10c5dd67628822fa377b776ab7929fe18c",
    strip_prefix = "woff2-c8c0d339131e8f1889ae8aac0075913d98d9a722",
    url = "https://github.com/google/woff2/archive/c8c0d339131e8f1889ae8aac0075913d98d9a722.zip",
)

# Harfbuzz
http_archive(
    name = "harfbuzz",
    build_file = "//third_party:harfbuzz.BUILD",
    integrity = "sha256-g1JYKXX8SKTUjiD1irq4oxqdp6Au3xEHyd+Uh/+3c0s=",
    strip_prefix = "harfbuzz-3de224b4883a64c5446267bda1d649db81137afc",
    urls = ["https://github.com/harfbuzz/harfbuzz/archive/3de224b4883a64c5446267bda1d649db81137afc.zip"],
)

# URI Templates
http_archive(
    name = "uritemplate-cpp",
    build_file = "//third_party:uritemplate-cpp.BUILD",
    strip_prefix = "uritemplate-cpp-1.0.1",
    integrity = "sha256-XwiP9k9mGukrqab4M1IfVKPEE55FmPOeLiTN3kxZfaw=",
    urls = ["https://github.com/returnzero23/uritemplate-cpp/archive/v1.0.1.zip"],
)

# Base 32 Hex
http_archive(
    name = "cppcodec",
    build_file = "//third_party:cppcodec.BUILD",
    integrity = "sha256-abpzBt/WJEKA0os255vhquwnQd2njfw6RryLFWsMRU0=",
    strip_prefix = "cppcodec-8019b8b580f8573c33c50372baec7039dfe5a8ce",
    url = "https://github.com/tplgy/cppcodec/archive/8019b8b580f8573c33c50372baec7039dfe5a8ce.zip",
)

# IFTB - Binned Incremental Font Transfer
http_archive(
    name = "iftb",
    build_file = "//third_party:iftb.BUILD",
    integrity = "sha256-3c4tnaKLikDSVfIvrPSZOFaiLCBIFpeq58foHChScn8=",
    strip_prefix = "binned-ift-reference-829549eb68e6b9f215ac58a61b39c0c12d35e61f",
    urls = ["https://github.com/garretrieger/binned-ift-reference/archive/829549eb68e6b9f215ac58a61b39c0c12d35e61f.zip"],
)

# IFT Specification - for Feature Registry
http_archive(
    name = "ift_spec",
    build_file = "//third_party:ift_spec.BUILD",
    sha256 = "3c8e7f78c49272b89b878a61729b1863b9f37c722f6623ee2eb146adccb41333",
    strip_prefix = "IFT-01037d264f657f9164f9522b8b16a7bab2e6917c",
    urls = ["https://github.com/w3c/IFT/archive/01037d264f657f9164f9522b8b16a7bab2e6917c.zip"],
)

# Fontations
http_archive(
    name = "fontations",
    urls = ["https://github.com/googlefonts/fontations/archive/b3514837812c462d94707bd0afc41b11e8cc4e6d.zip"],
    strip_prefix = "fontations-b3514837812c462d94707bd0afc41b11e8cc4e6d",
    build_file = "//third_party:fontations.BUILD",
    integrity = "sha256-HDDXjyJGNYemgLVp7XNFaFawWTyv8lgPEWfrgfzdFE8=",
)


# Rust Deps Config

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")

crate.from_cargo(
    name = "fontations_deps",
    cargo_lockfile = "//fontations:Cargo.lock",
    manifests = [
     "@fontations//:Cargo.toml",
     "@fontations//:fauntlet/Cargo.toml",
     "@fontations//:font-codegen/Cargo.toml",
     "@fontations//:font-test-data/Cargo.toml",
     "@fontations//:font-types/Cargo.toml",
     "@fontations//:fuzz/Cargo.toml",
     "@fontations//:incremental-font-transfer/Cargo.toml",
     "@fontations//:klippa/Cargo.toml",
     "@fontations//:otexplorer/Cargo.toml",
     "@fontations//:read-fonts/Cargo.toml",
     "@fontations//:shared-brotli-patch-decoder/Cargo.toml",
     "@fontations//:skrifa/Cargo.toml",
     "@fontations//:write-fonts/Cargo.toml",
    ],
)
use_repo(crate, "fontations_deps")

# Hedron - for generating compiles_commands.json

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "f5fbd4cee671d8d908f37c83abaf70fba5928fc7",
)